updated config, added working nvim config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,9 +1,7 @@
 - clean: ['~']
 
 - link:
-    ~/.bash_aliases: bash_aliases
-    ~/.vimrc: vimrc
     ~/.zshrc: zshrc
-    ~/.nvimrc: nvimrc
+    ~/.config/nvim: nvim/
 
 
