--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,7 +1,9 @@
 - clean: ['~']
 
 - link:
-    ~/.zshrc: zshrc
     ~/.config/nvim: nvim/
     ~/.tmux.conf: tmux.conf
     ~/.tmuxp: tmuxp
+
+- shell:
+    - [sh neobundleinstall.sh]
