--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,7 @@ unbind C-b
 
 set -sg escape-time 1
 
+set-window-option -g xterm-keys on
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
