--- a/termite/config
+++ b/termite/config
@@ -30,36 +30,36 @@ browser = chrome
  
  
 [colors]
-# Base16 Tomorrow
+# Base16 Eighties
 # Scheme: Chris Kempson (http://chriskempson.com)
 
-foreground      = #c5c8c6
-foreground_bold = #c5c8c6
-cursor          = #c5c8c6
-background      = #1d1f21
+foreground      = #d3d0c8
+foreground_bold = #d3d0c8
+cursor          = #d3d0c8
+background      = #2d2d2d
 
 # 16 color space
-color0  = #1d1f21
-color1  = #cc6666
-color2  = #b5bd68
-color3  = #f0c674
-color4  = #81a2be
-color5  = #b294bb
-color6  = #8abeb7
-color7  = #c5c8c6
-color8  = #969896
-color9  = #cc6666
-color10 = #b5bd68
-color11 = #f0c674
-color12 = #81a2be
-color13 = #b294bb
-color14 = #8abeb7
-color15 = #ffffff
+color0  = #2d2d2d
+color1  = #f2777a
+color2  = #99cc99
+color3  = #ffcc66
+color4  = #6699cc
+color5  = #cc99cc
+color6  = #66cccc
+color7  = #d3d0c8
+color8  = #747369
+color9  = #f2777a
+color10 = #99cc99
+color11 = #ffcc66
+color12 = #6699cc
+color13 = #cc99cc
+color14 = #66cccc
+color15 = #f2f0ec
 
 # 256 color space
-color16 = #de935f
-color17 = #a3685a
-color18 = #282a2e
-color19 = #373b41
-color20 = #b4b7b4
-color21 = #e0e0e0
+color16 = #f99157
+color17 = #d27b53
+color18 = #393939
+color19 = #515151
+color20 = #a09f93
+color21 = #e8e6df
