--- a/termite/config
+++ b/termite/config
@@ -10,6 +10,8 @@ dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
 font = Hack 10
+# font = Fantasque Sans Mono 12
+# font = Inconsolata 10
 scrollback_lines = 10000
 search_wrap = true
 #icon_name = terminal
