--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,10 +18,11 @@
         path: dircolors
     ~/.config/flake8:
         path: flake8
+    ~/.config/fish: fish/
 
-- shell:
-    -
-        command: [sh systeminstall.sh, Installing apps]
-        stdin: true
-        stdout: true
-        stderr: true
+# - shell:
+#     -
+#         command: [sh systeminstall.sh, Installing apps]
+#         stdin: true
+#         stdout: true
+#         stderr: true
