--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 set-option -g default-shell /usr/bin/fish
 
-set -g utf8
-set-window-option -g utf8 on
+# set -g utf8
+# set-window-option -g utf8 on
 
 set -g default-terminal "screen-256color"
 
