--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,30 +1,14 @@
 - clean: ['~']
 
 - link:
+    ~/:
+        force: true
+        path: zsh/
     ~/.config/nvim: 
         force: true
         path: nvim/
     ~/.tmux.conf: tmux.conf
-    ~/.tmuxp: 
-        force: true
-        path: tmuxp
     ~/.yaourtrc: yaourtrc
-    ~/.config/termite: termite/
-    ~/.zprezto/runcoms: 
-        force: true
-        path: preztorc
-    ~/.dircolors:
-        force: true
-        path: dircolors
     ~/.config/flake8:
         path: flake8
-    ~/.config/fish:
-        force: true
-        path: fish
 
-# - shell:
-#     -
-#         command: [sh systeminstall.sh, Installing apps]
-#         stdin: true
-#         stdout: true
-#         stderr: true
